--- a/FlareForge_UE/FlareForge.uproject
+++ b/FlareForge_UE/FlareForge.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "FlareForge",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"GameplayAbilities"
+			]
 		}
 	],
 	"Plugins": [
