--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -9,5 +9,6 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.BasicProjectile",DevComment="")
++GameplayTagList=(Tag="Ability.Dash",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 
