--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -10,5 +10,6 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.BasicProjectile",DevComment="")
 +GameplayTagList=(Tag="Ability.Dash",DevComment="")
++GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 
