--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -13,4 +13,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Dash",DevComment="")
 +GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
++GameplayTagList=(Tag="Character.Player",DevComment="")
 
