--- a/FlareForge_UE/FlareForge.uproject
+++ b/FlareForge_UE/FlareForge.uproject
@@ -25,6 +25,10 @@
 		{
 			"Name": "GameplayAbilities",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
+			"Enabled": true
 		}
 	]
 }
