--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-GlobalDefaultGameMode="/Script/FlareForge.FlareForgeGameMode"
+GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=True
 
 [/Script/Engine.RendererSettings]
