--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -12,6 +12,9 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.BasicProjectile.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Dash",DevComment="")
 +GameplayTagList=(Tag="Ability.Dash.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.Deflect",DevComment="")
++GameplayTagList=(Tag="Ability.Deflect.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
++GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
 
