--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -15,6 +15,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Deflect",DevComment="")
 +GameplayTagList=(Tag="Ability.Deflect.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.LightStrike",DevComment="")
++GameplayTagList=(Tag="Ability.LightStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
 
