--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -19,4 +19,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.LightStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
++GameplayTagList=(Tag="Stun.BasicProjectileHit",DevComment="")
++GameplayTagList=(Tag="Stun.HomingStrikeHit",DevComment="")
++GameplayTagList=(Tag="Stun.LightStrike",DevComment="")
 
