--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -15,8 +15,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Deflect",DevComment="")
 +GameplayTagList=(Tag="Ability.Deflect.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
-+GameplayTagList=(Tag="Ability.LightStrike",DevComment="")
-+GameplayTagList=(Tag="Ability.LightStrike.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.LightBurst",DevComment="")
++GameplayTagList=(Tag="Ability.LightBurst.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Stun.BasicProjectileHit",DevComment="")
