--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
-EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
+GameDefaultMap=/Game/TopDown/Maps/JakeMap.JakeMap
+EditorStartupMap=/Game/TopDown/Maps/JakeMap.JakeMap
 GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=True
 
