--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -1,8 +1,10 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/JakeMap.JakeMap
-EditorStartupMap=/Game/TopDown/Maps/JakeMap.JakeMap
+GameDefaultMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
+EditorStartupMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
 GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
-bOffsetPlayerGamepadIds=True
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Network/Network_Menu/BP_Network_GameInstance.BP_Network_GameInstance_C
+bUseSplitscreen=False
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
@@ -138,4 +140,17 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
