Pushy network tweak

--- a/FlareForge_UE/Config/DefaultGame.ini
+++ b/FlareForge_UE/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ FixedCameraDistance=1500.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Shipping
+BuildConfiguration=PPBC_Development
 BuildTarget=
 FullRebuild=False
 ForDistribution=False
@@ -95,6 +95,8 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="/Game/TopDown/Maps/Network_MainMenu")
++MapsToCook=(FilePath="/Game/TopDown/Maps/Network_PlayerInviteMap")
 +MapsToCook=(FilePath="/Game/TopDown/Maps/JakeMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
