--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
-EditorStartupMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
+GameDefaultMap=/Game/TopDown/Maps/JakeMap.JakeMap
+EditorStartupMap=/Game/TopDown/Maps/JakeMap.JakeMap
 GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Network/Network_Menu/BP_Network_GameInstance.BP_Network_GameInstance_C
