Revert "Merge branch 'main' into DiegoBranch"
This reverts commit e1c80db2ca5e186606ff6364dc6e9474d570145d, reversing
changes made to 207960b3dafb46aaa5fa7bb19e2b0f332cb57b8c.

--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/JakeMap.JakeMap
-EditorStartupMap=/Game/TopDown/Maps/JakeMap.JakeMap
+GameDefaultMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
+EditorStartupMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
 GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Network/Network_Menu/BP_Network_GameInstance.BP_Network_GameInstance_C
