Emote Cooldown/Delay

--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -15,11 +15,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Deflect",DevComment="")
 +GameplayTagList=(Tag="Ability.Deflect.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Emote",DevComment="")
++GameplayTagList=(Tag="Ability.Emote.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.LightBurst",DevComment="")
 +GameplayTagList=(Tag="Ability.LightBurst.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
++GameplayTagList=(Tag="AnimDelay",DevComment="")
++GameplayTagList=(Tag="AnimDelay.Attack",DevComment="")
 +GameplayTagList=(Tag="Stun.BasicProjectileHit",DevComment="")
 +GameplayTagList=(Tag="Stun.HomingStrikeHit",DevComment="")
 +GameplayTagList=(Tag="Stun.LightStrike",DevComment="")
