Build Test_12_04.zip

--- a/FlareForge_UE/Config/DefaultGame.ini
+++ b/FlareForge_UE/Config/DefaultGame.ini
@@ -98,6 +98,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/TopDown/Maps/Network_MainMenu")
 +MapsToCook=(FilePath="/Game/TopDown/Maps/Network_PlayerInviteMap")
 +MapsToCook=(FilePath="/Game/TopDown/Maps/JakeMap")
++MapsToCook=(FilePath="/Game/TopDown/Maps/JakeMapCopyTest")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
