Fortsättning Melee Attribute

--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -23,6 +23,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
 +GameplayTagList=(Tag="AnimDelay",DevComment="")
 +GameplayTagList=(Tag="AnimDelay.Attack",DevComment="")
++GameplayTagList=(Tag="Attributes.MeleeArmor",DevComment="")
 +GameplayTagList=(Tag="Stun.BasicProjectileHit",DevComment="")
 +GameplayTagList=(Tag="Stun.HomingStrikeHit",DevComment="")
 +GameplayTagList=(Tag="Stun.LightStrike",DevComment="")
