Emote Anim fixes

--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -3,8 +3,9 @@ GameDefaultMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
 EditorStartupMap=/Game/TopDown/Maps/Network_MainMenu.Network_MainMenu
 GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Network/Network_Menu/BP_Network_GameInstance.BP_Network_GameInstance_C
+GameInstanceClass=/Game/Network/Network_Menu/GI_Network.GI_Network_C
 bUseSplitscreen=False
+TransitionMap=/Game/TopDown/Maps/TravelMap.TravelMap
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
