--- a/FlareForge_UE/Config/DefaultGame.ini
+++ b/FlareForge_UE/Config/DefaultGame.ini
@@ -97,6 +97,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/TopDown/Maps/Network_MainMenu")
 +MapsToCook=(FilePath="/Game/TopDown/Maps/Network_PlayerInviteMap")
++MapsToCook=(FilePath="/Game/UI/AbilitySelect/AbilitySelectScreen")
 +MapsToCook=(FilePath="/Game/TopDown/Maps/JakeMap")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
