--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -19,6 +19,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.LightBurst.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Reflect",DevComment="")
 +GameplayTagList=(Tag="Ability.Reflect.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.ShotgunProjectile",DevComment="")
++GameplayTagList=(Tag="Ability.ShotgunProjectile.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport",DevComment="")
 +GameplayTagList=(Tag="Ability.Teleport.Cooldown",DevComment="")
 +GameplayTagList=(Tag="AnimDelay",DevComment="")
