--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -14,6 +14,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Dash.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.Emote",DevComment="")
 +GameplayTagList=(Tag="Ability.Emote.Cooldown",DevComment="")
++GameplayTagList=(Tag="Ability.FightMe.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.HomingStrike.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Ability.LightBurst",DevComment="")
 +GameplayTagList=(Tag="Ability.LightBurst.Cooldown",DevComment="")
