Seamless Travel funkar

--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Network/Network_Menu/GI_Network.GI_Network_C
 bUseSplitscreen=False
-TransitionMap=/Game/TopDown/Maps/TravelMap.TravelMap
+TransitionMap=/Game/TopDown/Maps/TransitionMap.TransitionMap
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
