Casting and Camera fixes

--- a/FlareForge_UE/Config/DefaultGameplayTags.ini
+++ b/FlareForge_UE/Config/DefaultGameplayTags.ini
@@ -27,6 +27,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="AnimDelay",DevComment="")
 +GameplayTagList=(Tag="AnimDelay.Attack",DevComment="")
 +GameplayTagList=(Tag="AnimDelay.Dash",DevComment="")
++GameplayTagList=(Tag="AnimDelay.FightMe",DevComment="")
 +GameplayTagList=(Tag="AnimDelay.Homing",DevComment="")
 +GameplayTagList=(Tag="AnimDelay.Reflect",DevComment="")
 +GameplayTagList=(Tag="Stun.BasicProjectileHit",DevComment="")
