--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -159,3 +159,8 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[Core.Log]
+LogCrash=Verbose
+LogNet=VeryVerbose
+LogNetTraffic=VeryVerbose
+LogNetDormancy=Verbose
