--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -159,3 +159,6 @@ SteamDevAppId=480
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
+[/Script/Engine.UserInterfaceSettings]
+bAllowHighDPIInGameMode=True
+
