--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -162,3 +162,8 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [/Script/Engine.UserInterfaceSettings]
 bAllowHighDPIInGameMode=True
 
+[Core.Log]
+LogCrash=Verbose
+LogNet=VeryVerbose
+LogNetTraffic=VeryVerbose
+LogNetDormancy=Verbose
