SkinCustomization och functionality på menu

--- a/FlareForge_UE/Config/DefaultEngine.ini
+++ b/FlareForge_UE/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDown/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/TopDown/Maps/MainMenu.MainMenu
+GameDefaultMap=/Game/TopDown/Maps/MainMenuFinal.MainMenuFinal
+EditorStartupMap=/Game/TopDown/Maps/MainMenuFinal.MainMenuFinal
 GlobalDefaultGameMode=/Script/FlareForge.FlareForgeGameMode
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Network/Network_Menu/GI_Network.GI_Network_C
